[gd_scene load_steps=8 format=3 uid="uid://dw7yw3qkoaae"]

[ext_resource type="PackedScene" uid="uid://c5j1yw7qkn80f" path="res://scenes/main/camera_controller.tscn" id="1_camera"]
[ext_resource type="Script" uid="uid://cjvrnj2ai16ty" path="res://scripts/game_table.gd" id="2_table"]

[sub_resource type="PlaneMesh" id="PlaneMesh_table"]
size = Vector2(12, 12)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_table"]
albedo_color = Color(0.2, 0.4, 0.2, 1)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sky"]
sky_horizon_color = Color(0.646, 0.656, 0.67, 1)
ground_horizon_color = Color(0.646, 0.656, 0.67, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_sky")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 2
ambient_light_color = Color(0.8, 0.8, 0.8, 1)

[node name="GameTable" type="Node3D"]
script = ExtResource("2_table")

[node name="CameraController" parent="." instance=ExtResource("1_camera")]

[node name="Table" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_table")
surface_material_override/0 = SubResource("StandardMaterial3D_table")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 8, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="Players" type="Node3D" parent="."]

[node name="PositionMarkers" type="Node3D" parent="."]

[node name="DrawPile" type="Node3D" parent="PositionMarkers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0.05, 0)

[node name="DiscardPile" type="Node3D" parent="PositionMarkers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0.05, 0)
